client/src/components/messages/MessageItem/index.module.css
.message {
  display: flex;
  align-items: end;
  gap: 9px;
  width: max-content;
  white-space: pre-wrap;
}

.sent {
  align-self: flex-end;
}

.received {
  align-self: flex-start;
  justify-self: left;
}

.username {
  font-size: 12px;
  font-weight: 500;
  color: #000;
}

.avatar {
  display: flex;
  justify-content: center;
  align-items: center;
  overflow: hidden;
  width: 34px;
  height: 34px;
  border-radius: 50%;
  background: #aaa1a1;
}

.avatar img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}
.messageBody {
  background: #aaa1a1;
  padding: 12px 16px;
  border-radius: 12px 12px 0 12px;
  min-width: 150px;
  font-size: 16px;
  margin-top: 12px;
  margin-bottom: 16px;
}

.received .messageBody {
  order: 2;
  border-radius: 12px 12px 12px 0px;
}

.messageTime {
  font-size: 10px;
}

.sent .messageTime {
  text-align: right;
}

